# deep_grasp_demo

./: .gitignore  .rosinstall  CMakeLists.txt  README.md  dexnet_install.sh  dexnet_requirements.txt  opencv_install.sh  package.xml  pcl_install.sh
config/: cylinder.pcd  gpd_config.yaml
config/calib/: camera.yaml  kinect.intr
deep_grasp_task/: CMakeLists.txt  README.md  package.xml
deep_grasp_task/config/: panda_object.yaml
deep_grasp_task/config/calib/: camera.yaml
deep_grasp_task/include/deep_grasp_task/: deep_pick_place_task.h
deep_grasp_task/launch/: gazebo_pick_place.launch  panda.launch  panda_world.launch  sensor_data_gazebo.launch
deep_grasp_task/meshes/objects/: bar_clamp.dae
deep_grasp_task/src/: deep_grasp_demo.cpp  deep_pick_place_task.cpp
deep_grasp_task/urdf/: panda_camera.urdf.xacro
deep_grasp_task/urdf/camera/: camera.urdf.xacro  camera_macro.urdf.xacro
deep_grasp_task/urdf/objects/: bar_clamp.urdf.xacro  cylinder.urdf.xacro  strawberry.urdf.xacro
deep_grasp_task/urdf/robots/: panda_camera.urdf.xacro
include/deep_grasp_demo/: gpd_pick_place_task.h
include/gqcnn_demo/: gqcnn_pick_place_task.h  image_server.h
launch/: gazebo_pick.launch  gdb_settings.gdb  gpd_demo.launch  gqcnn_demo.launch
meshes/objects/: strawberry.dae
moveit_task_constructor_dexnet/: CMakeLists.txt  README.md  package.xml
moveit_task_constructor_dexnet/config/: dexnet_config.yaml
moveit_task_constructor_dexnet/config/pickplace/: panda_object.yaml
moveit_task_constructor_dexnet/include/gqcnn_demo/: gqcnn_pick_place_task.h  image_server.h
moveit_task_constructor_dexnet/include/moveit_task_constructor_dexnet/: grasp_detection.h  image_server.h
moveit_task_constructor_dexnet/launch/: dexnet_demo.launch
moveit_task_constructor_dexnet/scripts/: grasp_detector
moveit_task_constructor_dexnet/src/: gqcnn_pick_place_demo.cpp  gqcnn_server  grasp_detection.cpp  grasp_image_detection.cpp  image_server.cpp  process_image_server.cpp
moveit_task_constructor_dexnet/srv/: GQCNNGrasp.srv  Images.srv
moveit_task_constructor_dexnet/urdf/: panda_camera.urdf.xacro
moveit_task_constructor_gpd/: CMakeLists.txt  README.md  package.xml
moveit_task_constructor_gpd/config/: gpd_config.yaml
moveit_task_constructor_gpd/data/pointclouds/: barclamp.pcd
moveit_task_constructor_gpd/include/deep_grasp_demo/: gpd_pick_place_task.h  process_cloud.h
moveit_task_constructor_gpd/include/moveit_task_constructor_gpd/: cloud_server.h  cloud_utils.h  grasp_detection.h
moveit_task_constructor_gpd/launch/: gpd_demo.launch
moveit_task_constructor_gpd/src/: cloud_server.cpp  gpd_action_server.cpp  gpd_pick_place_demo.cpp  grasp_cloud_detection.cpp  grasp_detection.cpp  point_cloud_server.cpp
moveit_task_constructor_gpd/src/deep_grasp_demo/: process_cloud.cpp
moveit_task_constructor_gpd/src/moveit_task_constructor_gpd/: cloud_utils.cpp
moveit_task_constructor_gpd/srv/: PointCloud.srv
scripts/: grasp_detector.py
src/: gpd_action_server.cpp  gpd_pick_place_demo.cpp  gpd_pick_place_task.cpp  gqcnn_action_server.cpp  gqcnn_pick_place_demo.cpp  gqcnn_pick_place_task.cpp  gqcnn_server
src/gqcnn_demo/: image_server.cpp
urdf/: panda_camera.urdf.xacro
urdf/objects/: bar_clamp.urdf.xacro  cylinder.urdf.xacro  strawberry.urdf.xacro
