<?xml version="1.0"?>
<package format="2">
  <name>gqcnn_demo</name>
  <version>0.0.1</version>
  <description>GQ-CNN to select a grasp candidate</description>

  <maintainer email="boston@picknik.ai">bostoncleek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>actionlib</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
