<?xml version="1.0"?>
<package format="2">
  <name>deep_grasp_task</name>
  <version>0.0.1</version>
  <description>Constucts a pick place task using deep learning for grasp synthesis</description>

  <maintainer email="boston@picknik.ai">Boston Cleek</maintainer>
  <author email="boston@picknik.ai">Boston Cleek</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>roscpp</depend>
  <depend>rosparam_shortcuts</depend>
</package>
