<?xml version="1.0"?>
<package format="2">
  <name>moveit_task_constructor_gpd</name>
  <version>0.0.1</version>
  <description> MoveIt task constructor pick and place using grasp pose detection </description>

  <maintainer email="boston@picknik.ai">Boston Cleek</maintainer>
  <author email="boston@picknik.ai">Boston Cleek</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>actionlib</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- <exec_depend version_gte="0.7.4">panda_moveit_config</exec_depend> -->
</package>
